<resources>
    <string name="app_name">Login Constraint Layout</string>
    <string name="tEmail">Email</string>
    <string name="tPassword">Password</string>
    <string name="btSignin">Sign-In</string>
    <string name="tData">Data Anda</string>
    <string name="tEmail2">Email :</string>
    <string name="tPassword2">Password :</string>
    <string name="txemail">Ini hasil Email</string>
    <string name="txpassword">Ini Hasil Pasword</string>
    <string name="label12">Login Berhasil</string>
    <string name="mdaftar">Pendaftaran</string>
    <string name="ldaftar">Daftar</string>
    <string name="enama">Masukkan Nama</string>
    <string name="eemail">Masukkan Email</string>
    <string name="epass">Masukkan Password</string>
    <string name="erepass">Masukkan Password Kembali</string>
    <string name="ealamat">Masukkan Alamat</string>
    <string name="lihatdata">Lihat Data</string>
    <string name="editdata">Edit Data</string>
    <string name="datakontak">Data Kontak</string>
    <string name="namaitem">Nama Item</string>
    <string name="detailkontak">Detail Kontak</string>
    <string name="nama">Nama</string>
    <string name="notel">Nomor Telepon</string>

</resources>